    individual polylines.  This makes it run faster when many points
    are involved.
19. src/xfig/core.sl: If an integer is passed to xfig_lookup_color,
    the value returned will be modulo num_colors.
20. src/xfig/polyline.sl: Use xfig_lookup_color in set_color methods.
21. src/xfig/plot.sl: Added "star", "larr", "rarr", "uarr", and "darr"
    symbols.  Also added xfig_plot_get_symbol_names functions.
22. examples/plot/symbol.sl: Rewrote this example.
23. src/vector.c: Modified the "vector" function to avoid an extra
    function when converting numeric value to a double.
24. src/xfig/polyline.sl: Tweaked the polyline_list_bbox method to
    improve performance.
25. src/xfig/plot.sl: added areafill and fillcolor qualifiers to the
    xfig_new_legend function.
26. src/xfig/polyline.sl: pict_scale was not accounting for the
    absolute position of the pict.
27. src/xfig/plot.sl: Added support for plotting via mixed world
    systems, e.g., world12, world21, etc.  Also, world0 may be used to
    refer to device coordinates, which run from 0 to 1.
28. src/xfig/plot.sl: The hplot method will call the shaded histogram
    routine if a fill qualifier is given.
29. examples/plot/world.sl: A new example.  Also some other examples
    were updated.
30. src/xfig/plot.sl: Added shade_region method and updated the
    world.sl example to illustrate its use.
31. src/xfig/plot.sl: When placing the title, account for the x2label.
32. src/xfig/plot.sl: Ignore tic_linestyle qualifier unless gridding.
33. src/xfig/plot.sl: Cleaned up the tic labeling code and added some
    minor tic labels when using log scaling.
34. src/vector.sl: small optimizations
35. src/xfig/clip.sl: Use slang2.2.0 list_to_array.
36. src/xfig/core.sl: Inline the vector calls in intersect_focal_plane.
37. src/xfig/plot.sl: Rewrote the way custom world coordinate systems
    were handled.  I also added a "cdf" system that is designed for
    plots of cumulative distribution functions.